# salariez

./: .gitignore  README.md  main.py  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
apps/activities/: admin.py  models.py  urls.py  views.py
apps/api/: __init__.py  controllers.py  mixins.py  security.py
apps/areas/: admin.py  api.py  apps.py  filters.py  forms.py  mixins.py  models.py  resources.py  serializers.py  urls.py  utils.py  views.py
apps/base/: admin.py  admin_actions.py  encoders.py  forms.py  managers.py  models.py  tests.py  urls.py  utils.py  validators.py  views.py  widgets.py
apps/cities/: admin.py  apps.py  filters.py  forms.py  mixins.py  models.py  resources.py  serializers.py  urls.py  utils.py  views.py
apps/cost_centers/: admin.py  api.py  apps.py  filters.py  forms.py  mixins.py  models.py  resources.py  serializers.py  urls.py  utils.py  views.py
apps/currencies/: admin.py  api.py  filters.py  forms.py  mixins.py  models.py  resources.py  serializers.py  urls.py  utils.py  views.py
apps/departments/: admin.py  api.py  filters.py  forms.py  models.py  resources.py  serializers.py  urls.py  utils.py  views.py
apps/educational_degrees/: admin.py  api.py  apps.py  filters.py  forms.py  mixins.py  models.py  resources.py  serializers.py  urls.py  (+1 more)
core/: asgi.py  context_processors.py  urls.py  wsgi.py
requirements/: base.txt  dev.txt  prod.txt
scripts/: create_faculties.py  import_employees.py  main.py
templates/: 404.html  500.html  base.html  functions.html  head.html  scripts.html  x-data.html
(+610 files in other folders)
